# vjsemijoias

./: .dockerignore  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  admin.html  alembic.ini  cadastro.html  carrinho.html  catalogo.html  checkout.html  generate_pdf.py  generate_placeholders.py  index.html  login.html  manifest.json  pdf-visualizar.html  process_logo.py  produto.html  pyproject.toml  railpack.json  render.yaml  service-worker.js
backend/: __init__.py  app.py  auth.py  catalog_pdf.py  config.py  database.py  import_products.py  infinitepay_client.py  models.py  store_config.py
css/: admin.css
docs/: ARCHITECTURE.md  AUDIT_COMERCIAL_PUBLICA.md  AUDIT_CONVERSAO.md  AUDIT_FRONTEND.md  AUDIT_MEDIA_IMAGES.md  AUDIT_PERFORMANCE.md  BACKUP.md  IMAGE_VARIANTS.md  MEDIA_MIGRATION_R2.md  PERFORMANCE_BASELINE.md  PRODUCT.md  ROADMAP.md  comandos.md  deploy-dev.md  dev-server.md  testing.md
frontend/: admin.html  cadastro.html  carrinho.html  catalogo.html  checkout.html  faq.html  garantia.html  index.html  login.html  manifest.json  pdf-visualizar.html  pedido.html  politica-privacidade.html  politica-troca.html  produto.html  robots.txt  service-worker.js  sitemap.xml  termos-uso.html  vj-admin.html
frontend-react/: index.html  package-lock.json  package.json  vite.config.js
js/: admin.js  api.js  cart.js  main.js  offline.js  products.js
migrations/: env.py
tests/: conftest.py  helpers.py  test_address.py  test_admin_auth.py  test_api.py  test_catalog_api.py  test_catalog_image_variants.py  test_core.py  test_coupons.py  (+17 more)
(+204 files in other folders)
